--- a/lections/lection_17_DOM_events/materials/index.html
+++ b/lections/lection_17_DOM_events/materials/index.html
@@ -15,6 +15,10 @@
             position: absolute;
             top: 100px;
         }
+
+        .active {
+            border: 5px solid blue;
+        }
     </style>
 </head>
 <body>
