--- a/lections/lection_18_DOm_events/materials/index.html
+++ b/lections/lection_18_DOm_events/materials/index.html
@@ -7,12 +7,21 @@
     <title>Document</title>
     <link rel="stylesheet" href="./main.css">
     <style>
-        
+        section{
+            border: 1px solid black;
+            margin-bottom: 10px;
+        }
     </style>
     <script src="./main.js"></script>
 </head>
 <body>
+    <div class="foo" foo="123" data-name="Valera" data-sureName="Ternavskiy">
+        <div class="first-child"></div>
+    </div>
+
+    <div class="container">
 
 
+    </div>
 </body>
 </html>
