--- a/lections/lection_20_Storage-practice/materials/index.html
+++ b/lections/lection_20_Storage-practice/materials/index.html
@@ -16,6 +16,7 @@
         .block {
             border: 5px solid black;
             padding: 10px;
+            margin-bottom: 10px;
         }
     </style>
     <script src="./main.js"></script>
@@ -23,10 +24,15 @@
 
 <body>
     <div class="block">
-            <button>Click</button>
+        <button class="button">Click</button>
         <span class="counter">0</span>
-
     </div>
+
+    <div class="block">
+            <button class="button">Click</button>
+            <span class="counter">0</span>
+    </div>
+
 </body>
 
 </html>
